--- a/oferta.html
+++ b/oferta.html
@@ -18,26 +18,25 @@
         <h1>Koszt montażu paneli podłogowych</h1>
         <table>
             <tr>
-                <th>Rodzaj paneli</th>
-                <th>Cena za m²</th>
-                <th>Czas montażu</th>
-                <th>Uwagi</th>
+                <th rowspan="2">Rodzaj paneli</th>
+                <th kolspan="2">Rozmiar</th>
+                <th rowspan="2">Koszt montażu</th>
             </tr>
             <tr>
-                <td>Panele laminowane</td>
-                <td>50 zł</td>
-                <td>2 godziny</td>
-                <td rowspan="2">Standardowy montaż</td>
+                <td>Laminowane</td>
+                <td>30</td>
+                <td>200</td>
+                <td>Standardowy montaż</td>
             </tr>
             <tr>
-                <td>Panele winylowe</td>
-                <td>70 zł</td>
-                <td>3 godziny</td>
+                <td>Winylowe</td>
+                <td>20</td>
+                <td>200</td>
             </tr>
             <tr>
-                <td>Deska podłogowa</td>
-                <td>100 zł</td>
-                <td>4 godziny</td>
+                <td>Deska</td>
+                <td>10</td>
+                <td>100</td>
                 <td>Specjalistyczne przygotowanie podłoża</td>
             </tr>
         </table>
