--- a/oferta.html
+++ b/oferta.html
@@ -23,21 +23,26 @@
                 <th rowspan="2">Koszt montażu</th>
             </tr>
             <tr>
+                <td>Szerokość</td>
+                <td>Długość</td>
+            </tr>
+            <tr>
                 <td>Laminowane</td>
                 <td>30</td>
                 <td>200</td>
-                <td>Standardowy montaż</td>
+                <td>12</td>
             </tr>
             <tr>
                 <td>Winylowe</td>
                 <td>20</td>
                 <td>200</td>
+                <td>14</td>
             </tr>
             <tr>
                 <td>Deska</td>
                 <td>10</td>
                 <td>100</td>
-                <td>Specjalistyczne przygotowanie podłoża</td>
+                <td>18</td>
             </tr>
         </table>
     </main>
